feat: problem5 거스름돈을 list로 return